--- a/records.html
+++ b/records.html
@@ -2,7 +2,22 @@
  <h1>
 Anomaly records
  </h1>
+ <h2>
+The Atention Seeker
+ </h2> 
  <p>
-This is where I record my anomalys It has nothing now but I will add stuff. 
+The atention seeker is a anomaly that only comes out at night, it makes a noise
+to atract its pray. If the pray looks at it or makes a soden move, it kills them 
+by moving slowly and hypnotizing its prey them pouncing. Its main meal are humans.
+It likes to hide near dark areas.
 </p>
+<h2>
+How to deal with them:
+</h2>
+<p>
+If you hear a random noise in the
+night then don't move or make a noise
+and act like your sleeping, it will leave eventualy.
+https://n1ghtwatching.github.io/Anomaly-records/records, 
+  </p>
   </html>
